# neuro_phys_sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  check_usage.sh
scripts/: evaluate_model.py  model_creation.py  sample.py  sim_world.py  test_train_data.py  train_model.py
src/: bin_read_data.py  combdata.py  model.py  model2full.py  realPhysics.cpp  usemodel2predict.py
